website/websites/u32/code/fannkuchredux.2.v8.log

Wed, 08 Sep 2010 19:29:34 GMT

COMMAND LINE:
/usr/local/src/v8/d8 --nodebugger fannkuchredux.v8-2.v8 -- 10

PROGRAM FAILED 


PROGRAM OUTPUT:
fannkuchredux.v8-2.v8:49: SyntaxError: Unexpected token [
var [checksum,pf] = fannkuch(n);
    ^
